Edited Footer and details

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,5 +1,11 @@
 $primary_color: #097ceb;
 
-$secondary_color: #303030;
+$main_bg: #1C1C1C;
+
+$footer_bg: #303030;
+
+$light: white;
+
+$dark: black;
 
 $section_vertical_padding: 30px;
